# ref

./: .gitignore  CHANGELOG.md  OUTPUT.md  README.md  TODO.md  extract_wisdom_script.sh  get_transcript.py  medium_debug.py  pyproject.toml  readd.py  ref  ref-merger-1.5.py  requirements.txt  setup.cfg  transcript_checker.py
.codex/: AGENTS.md  AGENTS_WORKFLOW.md
.codex/modes/: BLOGGER.md  CODER.md  SWAMMANAGER.md  TASKMASTER.md
.codex/notes/: codex-quick-start.md  swarmmanager-topic
extension/: LIBREWOLF-INSTALL.md  README.md  background.js  manifest.json  popup.html
scripts/: build-firefox.sh
src/ref_cli/: __init__.py  advisors.py  backup_util.py  cli.py  completion.py  enrich_cli.py  enrichment.py  fix_reddit_titles.py  fix_x_titles.py  references_format.py  title_fixer.py
src/ref_cli/config/: default_config.yaml
src/ref_cli/utils/: __init__.py  colors.py
tests/: conftest.py  test_advisors.py  test_backup_util.py  test_completion.py  test_enrichment.py  test_references_format.py  test_references_sanitization.py  test_title_extraction.py  test_title_fixer.py  test_transcript_blocking.py
