[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ref-cli"
description = "CLI tool for recording and managing URL references"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["cli", "reference", "url", "youtube"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "python-dotenv>=0.19.0",
    "google-api-python-client>=2.0.0",
    "pyyaml>=5.4.0",
    "setuptools>=45.0.0",
    "colorama>=0.4.6",
    "yt-dlp>=2023.12.30",
    "youtube-transcript-api>=1.1.0"
]
dynamic = ["version"]

[project.scripts]
ref = "ref_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ref_cli", "ref_cli.utils"]

[tool.setuptools_scm]
write_to = "src/ref_cli/_version.py" 