[metadata]
name = ref-cli
author = draeician
author_email = your.email@example.com
description = CLI tool for recording and managing URL references
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0
    beautifulsoup4>=4.9.0
    python-dotenv>=0.19.0
    google-api-python-client>=2.0.0
    pyyaml>=5.4.0
    setuptools>=45.0.0

[options.packages.find]
where = src

[options.package_data]
ref_cli = config/*.yaml 